feat: use cargo-workspaces for Rust workspace version management
Replace sed-based version update with cargo-workspaces for proper
workspace dependency version management when publishing to crates.io.

- Install cargo-workspaces in a separate step
- Use `cargo workspaces version custom` for unified version update
- Properly handles [workspace.package].version inheritance
- Properly handles [workspace.dependencies] internal crate versions

--- a/action.yml
+++ b/action.yml
@@ -158,13 +158,29 @@ runs:
           echo "" >> CHANGELOG.md
         fi
 
+    - name: Install cargo-workspaces (Rust)
+      shell: bash
+      run: |
+        if [ -f Cargo.toml ]; then
+          if ! command -v cargo-workspaces &> /dev/null; then
+            echo "Installing cargo-workspaces..."
+            cargo install cargo-workspaces --locked
+          fi
+        fi
+
     - name: Update Cargo.toml version (Rust)
       shell: bash
       run: |
         VERSION="${{ steps.version.outputs.version }}"
         if [ -f Cargo.toml ]; then
-          echo "Updating Cargo.toml to version ${VERSION}"
-          sed -i "s/^version = \"[^\"]*\"/version = \"${VERSION}\"/" Cargo.toml
+          echo "Updating Cargo workspace to version ${VERSION}"
+          # Use cargo-workspaces for proper workspace version management
+          # This handles [workspace.package].version and [workspace.dependencies]
+          cargo workspaces version custom "${VERSION}" --no-git-commit --yes || {
+            # Fallback to sed for non-workspace projects
+            echo "cargo-workspaces failed, falling back to sed..."
+            sed -i "s/^version = \"[^\"]*\"/version = \"${VERSION}\"/" Cargo.toml
+          }
         fi
 
     - name: Update package.json version (Node.js/npm)
